hphp/test/zend/bad/tests-output/ob_011.php
<?php
function obh($s)
{
	return ob_get_flush();
}
ob_start("obh");
echo "foo\n";
?>